# Microservices-architecture-refresher

./: README.md  docker-compose.yml
client/: Dockerfile  index.html  package-lock.json  package.json
client/src/: App.tsx
client/src/config/: Houses.tsx  HousesCreate.tsx  HousesUpdate.tsx  Wrapper.tsx
client/src/core/: Core.tsx  Cores.tsx
client/src/interfaces/: Menu.tsx  Nav.tsx  house.ts
services/backend/: Dockerfile  pyproject.toml
services/backend/config/: settings.py  urls.py
services/backend/houses/: admin.py  models.py  serializers.py  urls.py  views.py
services/backend/houses/migrations/: 0001_initial.py  0002_alter_checker_id_alter_house_id.py  0003_alter_house_image.py
services/core/: Dockerfile  core.py  pyproject.toml
services/core/migrations/versions/: 92c0006c01b3_.py
