[project]
name = "config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-cors-headers>=4.6.0",
    "django>=5.1.3",
    "djangorestframework>=3.15.2",
    "pika>=1.3.2",
    "pytz>=2024.2",
    "mysqlclient>=2.2.6",
]
